--- a/app/src/main/res/layout/activity_sing_up_activiity.xml
+++ b/app/src/main/res/layout/activity_sing_up_activiity.xml
@@ -23,7 +23,8 @@
         android:layout_height="wrap_content"
         android:text="@string/signup"
         android:id="@+id/button3"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:onClick="clickSignUpSign" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -118,7 +119,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/editText4"
                     android:layout_weight="1"
-                    android:onClick="clickSignUpSign" />
+                     />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
