--- a/app/src/main/res/layout/activity_detall.xml
+++ b/app/src/main/res/layout/activity_detall.xml
@@ -50,14 +50,17 @@
                     android:layout_height="wrap_content"
                     android:text="&lt;&lt;&lt;"
                     android:id="@+id/button7"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:onClick="clickBackImage" />
 
                 <Button
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text=">>>"
                     android:id="@+id/button8"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:nestedScrollingEnabled="false"
+                    android:onClick="clickNext" />
             </LinearLayout>
 
             <TextView
